<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name_hint"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/login_txt_size"
                android:textStyle="italic"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
        <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/email"
           android:hint="@string/email_hint"
            android:textSize="@dimen/login_txt_size"
            android:textStyle="italic"
           android:inputType="textEmailAddress"
           android:maxLines="1"
            android:textColorHint="@android:color/white"
           android:singleLine="true"
           android:textColor="@android:color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile"
                android:hint="@string/mobile_hint"
                android:textSize="@dimen/login_txt_size"
                android:inputType="phone"
                android:textColorHint="@android:color/white"
                android:textStyle="italic"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password_hint"
                android:textSize="@dimen/login_txt_size"
                android:textColorHint="@android:color/white"
                android:textStyle="italic"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmpassword"
                android:textColorHint="@android:color/white"
                android:textStyle="italic"
                android:textSize="@dimen/login_txt_size"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>
        </LinearLayout>
            <Button
                android:layout_width="@dimen/button_size_login_register_w"
                android:layout_height="@dimen/button_size_login_register_h"
                android:text="@string/button_register"
                android:background="@color/buttonColorRed"
                android:textColor="@android:color/white"
                android:textStyle="italic"
                android:onClick="registerUser"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/existing_user"
            android:onClick="loginPage"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>